MAT-59
Implemented Substract compute visitor

Now computing Substract operations.